# yolov8-sort-ncnn

./: .gitignore  CMakeLists.txt  README.md
data/detection/: test.txt
head/: utils.h  yoloV8.h
src/: CMakeLists.txt  main.cpp  sort.cpp  utils.cpp  yoloV8.cpp  yolov8main.cpp
test/: CMakeLists.txt  coco_vali.cpp
test/coco/: CMakeLists.txt  coco_test.cpp  coco_vali.cpp
